--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="zagolovok"><h1>Привет Мир!</h1>></div>
+    <div>
+        <div class="block"> <a href="#" class="link"></a></div>>
+    </div>
 
             
     
